--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,44 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- Bootstrap CDN Link -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TeeTime</title>
 </head>
 <body>
+    <style>
+        body {
+            font-size: 20px; 
+            font-family: "Roboto", sans-serif;
+            background-color: #5CC8FF;
+        }
+        .btn-danger {
+            border-radius: 2px solid black;
+            background-color: #050505;
+            color: white;
+        }
+        .masthead {
+            height: auto;
+            padding: 20px 15px;
+        }
+    </style>
+    <!-- Nav Bar -->
+    <nav class ="navbar navbar-expand-sm bg-light shadow" id="primarynav">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'home' %}">TeeTime</a>
+            <button class="navbar-toggler btn btn-primary" type="button" data-toggle="collapse">Tee-Time</button>
+
+        </div>
+
+    </nav>
     
 </body>
 </html>
