--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,8 +19,7 @@
     <!-- Bootstrap CDN Link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!-- Load CSS files -->
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'staticfiles/css/style.css'}">
+    <link rel="stylesheet" href="{% static 'staticfiles/css/styles.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TeeTime</title>
@@ -27,7 +29,7 @@
         body {
             font-size: 20px; 
             font-family: "Roboto", sans-serif;
-            background-color: #5CC8FF;
+            background-color: #1b98e0;
         }
         .btn-danger {
             border-radius: 2px solid black;
@@ -59,5 +61,8 @@
 
         </div>
     </nav>
+    <!-- Content goes here -->
 </body>
 </html>
+
+{% endblock %}
