Extend base.html to index.html

--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+
 {% load static %}
 
 {% block content %}
@@ -64,5 +66,4 @@
     <!-- Content goes here -->
 </body>
 </html>
-
 {% endblock %}
