--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,8 +1,5 @@
-{% extends "base.html" %}
-
 {% load static %}
 
-{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,7 +18,7 @@
     <!-- Bootstrap CDN Link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!-- Load CSS files -->
-    <link rel="stylesheet" href="{% static 'staticfiles/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TeeTime</title>
@@ -29,19 +26,19 @@
 <body>
     <style>
         body {
-            font-size: 20px; 
-            font-family: "Roboto", sans-serif;
-            background-color: #1b98e0;
-        }
-        .btn-danger {
-            border-radius: 2px solid black;
-            background-color: #050505;
-            color: white;
-        }
-        .masthead {
-            height: auto;
-            padding: 20px 15px;
-        }
+        font-size: 20px; 
+        font-family: "Roboto", sans-serif;
+        background-color: #1b98e0;
+    }
+    .btn-danger {
+        border-radius: 2px solid black;
+        background-color: #050505;
+        color: white;
+    }
+    .masthead {
+        height: auto;
+        padding: 20px 15px;
+    }
     </style>
     <!-- Nav Bar -->
     <nav class ="navbar navbar-expand-sm bg-light shadow" id="primarynav">
@@ -63,7 +60,8 @@
 
         </div>
     </nav>
+    {% block content %}
     <!-- Content goes here -->
+    {% endblock content %}
 </body>
 </html>
-{% endblock %}
