--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -8,6 +8,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/golf.png' %}">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -16,7 +17,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <!-- Bootstrap CDN Link -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Load CSS files -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <meta charset="UTF-8">
@@ -24,44 +25,20 @@
     <title>TeeTime</title>
 </head>
 <body>
-    <style>
-        body {
-            font-size: 20px; 
-            font-family: "Roboto", sans-serif;
-            background-color: #1b98e0;
-        }
-        .btn-danger {
-            border-radius: 2px solid black;
-            background-color: #050505;
-            color: white;
-        }
-        .masthead {
-            height: auto;
-            padding: 20px 15px;
-        }
-    </style>
-    <!-- Nav Bar -->
-    <nav class ="navbar navbar-expand-sm bg-light shadow" id="primarynav">
+     <!-- Nav Bar -->
+     <nav class ="navbar navbar-expand-sm bg-light shadow" id="primarynav">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">TeeTime</a>
             <!-- Burger icon navbar inspired by Love Running -->
             <button class="navbar-toggler btn btn-primary" data-target="navbarResponsive" type="button" data-toggle="collapse">Tee-Time</button><span class="navbar-toggler-icon"></span>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
+                <ul class="nav nav-pills ml-auto">
                     <li class="nav-item"><a class="nav-link" href="X"></a>Home</li>
                     <li class="nav-item"><a class="nav-link" href="X"></a>Blog</li>
                     <li class="nav-item"><a class="nav-link" href="X"></a>Register</li>
                 </ul>
-                
-
             </div>
-
-
-
         </div>
     </nav>
-    {% block content %}
-    <!-- Content goes here -->
-    {% endblock content %}
 </body>
 </html>
