--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -30,12 +30,12 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">TeeTime</a>
             <!-- Burger icon navbar inspired by Love Running -->
-            <button class="navbar-toggler btn btn-primary" data-target="navbarResponsive" type="button" data-toggle="collapse">Tee-Time</button><span class="navbar-toggler-icon"></span>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="nav nav-pills ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="X"></a>Home</li>
-                    <li class="nav-item"><a class="nav-link" href="X"></a>Blog</li>
-                    <li class="nav-item"><a class="nav-link" href="X"></a>Register</li>
+            <button class="navbar-toggler btn btn-primary" data-target="navbarResponsive" type="button" data-toggle="collapse">Tee-Time</button><span class="navbar-toggler-icon ms-auto"></span>
+            <div class="collapse navbar-collapse navbar-toggler-right" id="navbarResponsive">
+                <ul class="navbar-nav navbar-links ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#"></a>Home</li>
+                    <li class="nav-item"><a class="nav-link" href="#"></a>Blog</li>
+                    <li class="nav-item"><a class="nav-link" href="#"></a>Register</li>
                 </ul>
             </div>
         </div>
