Delete code and start base.html again

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -25,20 +25,18 @@
     <title>TeeTime</title>
 </head>
 <body>
-     <!-- Nav Bar -->
-     <nav class ="navbar navbar-expand-sm bg-light shadow" id="primarynav">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">TeeTime</a>
-            <!-- Burger icon navbar inspired by Love Running -->
-            <button class="navbar-toggler btn btn-primary" data-target="navbarResponsive" type="button" data-toggle="collapse">Tee-Time</button><span class="navbar-toggler-icon ms-auto"></span>
-            <div class="collapse navbar-collapse navbar-toggler-right" id="navbarResponsive">
-                <ul class="navbar-nav navbar-links ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#"></a>Home</li>
-                    <li class="nav-item"><a class="nav-link" href="#"></a>Blog</li>
-                    <li class="nav-item"><a class="nav-link" href="#"></a>Register</li>
-                </ul>
+    <!-- Navigation bar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="contain-fluid">
+            <a class="navbar-brand" href="#">TeeTime</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                
             </div>
         </div>
+
     </nav>
 </body>
 </html>
