--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,31 @@
 body {
-    font-size: 20px; 
     font-family: "Roboto", sans-serif;
-    background-color: #1b98e0;
+    font-size: 20px;
+    background-color: #2dc2bd;
 }
-.btn-danger {
-    border-radius: 2px solid black;
-    background-color: #050505;
-    color: white;
+
+h1 {
+    color: green;
+    text-align: center;
+    text-shadow: 2px 2px #000000;
+    padding: 10px 10px 10px 10px;
 }
-.masthead {
-    height: auto;
-    padding: 20px 15px;
+
+header {
+    background-color: #e09f3e;
+}
+
+a {
+    text-decoration: none;
+}
+
+.container-fluid {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    letter-spacing: 2px; 
+}
+
+.shadow {
+    box-shadow: 2px 4px 4px -2px rgba(0, 0, 0, 0.5);
 }
