--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -26,14 +26,29 @@
 </head>
 <body>
     <!-- Navigation bar -->
+    <h1 id="heading"><a href="base.html">TeeTime</h1></a>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="contain-fluid">
-            <a class="navbar-brand" href="#">TeeTime</a>
+            <a class="navbar-brand" id="heading" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Golf Course Reviews</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Golf News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Latest Golf Gear</a>
+                    </li>
+                </ul>
+
             </div>
         </div>
 
