--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,28 +4,16 @@ body {
     background-color: #2dc2bd;
 }
 
-h1 {
-    color: green;
+#heading {
     text-align: center;
-    text-shadow: 2px 2px #000000;
-    padding: 10px 10px 10px 10px;
 }
 
-header {
-    background-color: #e09f3e;
+.container-fluid {
+
 }
 
 a {
     text-decoration: none;
-}
-
-.container-fluid {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    letter-spacing: 2px; 
-}
-
-.shadow {
-    box-shadow: 2px 4px 4px -2px rgba(0, 0, 0, 0.5);
+    text-align: center;
+    color: black;
 }
