--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -30,25 +30,25 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="contain-fluid">
             <a class="navbar-brand" id="heading" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-6 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Golf Course Reviews</a>
+                        <a class="nav-link acive" href="#">Golf Course Reviews</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Golf News</a>
+                        <a class="nav-link active" href="#">Golf News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Latest Golf Gear</a>
+                        <a class="nav-link active" href="#">Latest Golf Gear</a>
                     </li>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
                 </ul>
-
             </div>
         </div>
 
