--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -27,13 +27,13 @@
 <body>
     <!-- Navigation bar -->
     <h1 id="heading"><a href="base.html">TeeTime</h1></a>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom border-body">
         <div class="contain-fluid">
             <a class="navbar-brand" id="heading" href="#"></a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-6 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link acive" href="#">Golf Course Reviews</a>
@@ -44,14 +44,13 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Latest Golf Gear</a>
                     </li>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                 </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
             </div>
         </div>
-
     </nav>
 </body>
 </html>
