--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,3 +13,9 @@ a {
     text-align: center;
     color: black;
 }
+
+a:hover {
+    background-color: rgb(255, 0, 0);
+    transition-duration: 0.4s;
+}
+
