--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -28,10 +28,9 @@
     <!-- Navigation bar -->
     <h1 id="heading"><a href="base.html">TeeTime</h1></a>
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom border-body">
-        <div class="contain-fluid">
-            <a class="navbar-brand" id="heading" href="#"></a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-6 mb-lg-0">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+                <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Home</a>
                     </li>
@@ -45,7 +44,7 @@
                         <a class="nav-link active" href="#">Latest Golf Gear</a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
+                <form class="search-bar" class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
