--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -31,16 +31,16 @@
         <div class="container-fluid">
             <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item text-black">
                         <a class="nav-link active" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item text-black">
                         <a class="nav-link acive" href="#">Golf Course Reviews</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item text-black">
                         <a class="nav-link active" href="#">Golf News</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item text-black">
                         <a class="nav-link active" href="#">Latest Golf Gear</a>
                     </li>
                 </ul>
