--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -51,5 +51,15 @@
             </div>
         </div>
     </nav>
+    <h1>Catch up all the latest golf news!</h1>
+    <div class="post-list">
+        {% for post in posts %}
+            <div class="post">
+                <h2><a href="{% url 'post_detail.html' post.pk %}">{{ post.title }}</a></h2>
+                <p>{{ post.content|slice:":100" }}...</p>
+                <p><small>By {{ post.author }} on {{ post.date_posted }}</small></p>
+            </div>
+        {% endfor %}
+    </div>
 </body>
 </html>
