Add hero unit on landing page

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -51,7 +51,11 @@
             </div>
         </div>
     </nav>
-    <h1>Catch up all the latest golf news!</h1>
+    <div class="hero-unit">
+        <h1>Catch up all the latest golf news!</h1>
+        <p>Welcome to TeeTime</p>
+        <p><a href="#" class="btn btn-primary btn-large">Click here to register &raquo;</p>
+    </div>
     <div class="post-list">
         {% for post in posts %}
             <div class="post">
