Add previous and next buttons

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -52,8 +52,8 @@
         </div>
     </nav>
     <div class="hero-unit">
-        <h1>Catch up all the latest golf news!</h1>
-        <p>Welcome to TeeTime</p>
+        <h1>Welcome to TeeTime</h1>
+        <h2>Catch up on all the latest golf news!</h2>
         <p><a href="#" class="btn btn-primary btn-large">Click here to register &raquo;</p>
     </div>
     <div class="post-list">
@@ -65,5 +65,11 @@
             </div>
         {% endfor %}
     </div>
+    <footer>
+        <ul class="pager">
+            <li><a href="#">Previous</a></li>
+            <li><a href="#">Next</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
