--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -34,7 +34,7 @@
                 <h1 class="post-title">{{ post.title }}</h1>
                 <p>{{ post.content }}</p>
                 <p><small>By {{ post.author }} on {{ post.date_posted }}</small></p>
-                <a href="{% url 'index.html' %}">Return to home page</a>
+                <a href="{% url 'home.html' %}">Return to home page</a>
             </div>
         </div>
     </div>
