--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -27,3 +27,26 @@
     <title>TeeTime</title>
 </head>
 </html>
+
+{% block content %}
+<div class="hero-unit">
+    <h1 id="heading">Welcome to TeeTime</h1>
+    <p><a href="#" class="btn btn-primary btn-large">Click here to register &raquo;</a></p>
+</div>
+<div class="post-list">
+    {% for post in posts %}
+        <div class="post">
+            <h2><a href="{% url 'post_detail.html' post.pk %}">{{ post.title }}</a></h2>
+            <p>{{ post.content|slice:":100" }}...</p>
+            <p><small>By {{ post.author }} on {{ post.date_posted }}</small></p>
+        </div>
+    {% endfor %}
+</div>
+
+<footer>
+    <ul class="pager">
+        <li><a href="#">Previous</a></li>
+        <li><a href="#">Next</a></li>
+    </ul>
+</footer>
+{% endblock %}
