Install a production-ready webserver for Heroku

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -53,10 +53,9 @@
             </div>
         </div>
     </nav>
-    {% comment %}
-    <!-- <div class="hero-unit">
+    <div class="hero-unit">
         <h1 id="heading">Welcome to TeeTime</h1>
-        <p><a href="#" class="btn btn-primary btn-large">Click here to register &raquo;</p>
+        <p><a href="#" class="btn btn-primary btn-large">Click here to register &raquo;</a></p>
     </div>
     <div class="post-list">
         {% for post in posts %}
@@ -66,18 +65,17 @@
                 <p><small>By {{ post.author }} on {{ post.date_posted }}</small></p>
             </div>
         {% endfor %}
-    </div> -->
-    {% endcomment %}
+    </div> 
     
     {% block content %}
 
     {% endblock content %}
 
     <footer>
-        <!-- <ul class="pager">
+        <ul class="pager">
             <li><a href="#">Previous</a></li>
             <li><a href="#">Next</a></li>
-        </ul> -->
+        </ul> 
     </footer>
 </body>
 </html>
