--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -1,32 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 {% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="{% static 'images/golf.png' %}">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="static/images/golf.png" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <!-- Bootstrap CDN Link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Load CSS files -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ post.title }}</title>
-</head>
+{% block content %}
 <body>
     <div class="masthead">
         <div class="container">
@@ -38,5 +12,12 @@
             </div>
         </div>
     </div>
+    <div class="media">
+        <img class="mr-3" src="#" alt="Golf related image">
+        <div class="media-body">
+            <h5 class="fw-bold">Blog Post - Golf Related</h5>
+            Golf related content...
+        </div>
+    </div>
 </body>
-</html>
+{% endblock content %}
