Add register.html and sign up form

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -26,7 +26,8 @@
 </head>
 <body>
     <div class="page-header">
-        <h1>TeeTime<small class="right">All things golf related</small></h1>
+        <h1>TeeTime</h1>
+        <span>All things golf related</span>
     </div>
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom border-body">
@@ -70,10 +71,7 @@
 
     {% endblock content %}
     <footer>
-        <ul class="pager">
-            <li><a href="#">Previous</a></li>
-            <li><a href="#">Next</a></li>
-        </ul> 
     </footer>
 </body>
 </html>
+   
