--- a/blog/templates/content.html
+++ b/blog/templates/content.html
@@ -4,6 +4,11 @@
 
 {% block content %}
 
-
+<footer>
+    <ul class="pager">
+        <li><a href="#">Previous &raquo;</a></li>
+        <li><a href="#">Next &raquo;</a></li>
+    </ul> 
+</footer>
 
 {% endblock content %}
