--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,4 +1,14 @@
 {% extends "base.html" %}
 
+{% block content %}
+
+<footer>
+    <ul class="pager">
+        <li><a href="#">Next &raquo;</a></li>
+    </ul> 
+</footer>
+
+{% endblock content %}
+
 {% load static %}
 
