--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
 {% load static %}
 {% block content %}
 <body>
@@ -20,4 +20,10 @@
         </div>
     </div>
 </body>
+<footer>
+    <ul class="pager">
+        <li><a href="#">Previous &raquo;</a></li>
+        <li><a href="#">Next &raquo;</a></li>
+    </ul> 
+</footer>
 {% endblock content %}
