--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,6 +34,45 @@ h1 {
     width: 100%;
 }
 
+/* Form styles */
+
+.form-container {
+    max-width: 400px;
+    margin: 40px auto;
+    padding: 15px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+}
+
+#form-heading {
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid black;
+    border-radius: 6px;
+}
+
+button {
+    width: 100%;
+    padding: 10px;
+    color: white;
+    border-radius: 6px;
+    font-size: 20px;
+}
+
+/* Search bar styles */
+
 .search-bar {
     display: flex;
 }
@@ -73,6 +112,10 @@ a:hover {
 }
 
 .pager a:hover {
+    background-color: #F45D01;
+}
+
+button:hover {
     background-color: #F45D01;
 }
 
