--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,14 +1,19 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% load static %}
 
-<footer>
-    <ul class="pager">
-        <li><a href="#">Next &raquo;</a></li>
-    </ul> 
-</footer>
+<div class="post-list">
+    {% for post in posts %}
+        <div class="post">
+            <h2><a href="{% url 'post_detail.html' post.pk %}">{{ post.title }}</a></h2>
+            <p>{{ post.content|slice:":100" }}...</p>
+            <p><small>By {{ post.author }} on {{ post.date_posted }}</small></p>
+        </div>
+    {% endfor %}
+</div> 
+
+{% block content %}
 
 {% endblock content %}
 
-{% load static %}
 
