--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -58,11 +58,24 @@
         <h1 id="heading">Welcome to TeeTime</h1>
         <p><a href="#" class="btn btn-primary btn-large">Click here to register &raquo;</a></p>
     </div>
-    <button class="nav-button">Click here to view our blog posts!</button>
-    <button class="nav-button">Click here to view our favourite golf courses!</button>
-    <button class="nav-button">Click here to view the background story of Darragh, the creator of TeeTime!</button>
+    <div>
+        <!-- Buttons which will take the user to different parts of the site -->
+        <button class="nav-button text-black">Click here to view our blog posts &raquo;</button>
+        <button class="nav-button text-black">Click here to view our favourite golf courses &raquo;</button>
+        <button class="nav-button text-black">Click here to view the background story of Darragh, the creator of TeeTime &raquo;</button>
+    </div>
     <footer>
-    </footer>
+        <div>
+            <!-- Font Awesome script and icons -->
+            <script src="https://kit.fontawesome.com/09d74f525c.js" crossorigin="anonymous"></script>
+          <ul id="socmed">
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://x.com/" target="_blank" rel="noopener" aria-label="visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+          </ul>
+        </div>
+ 
 </body>
 </html>
    
