--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -60,6 +60,11 @@
         <h1 id="heading">Welcome to TeeTime</h1>
         <p><a href="register.html" class="btn btn-primary btn-large">Sign-up for our blog or sign-in here &raquo;</a></p>
     </div>
+    <main>
+        {% block content %}
+
+        {% endblock %}
+    </main>
     <div class="buttons">
         <!-- Buttons which will take the user to different parts of the site -->
         <button class="nav-button text-black">Click here to view our blog posts &raquo;</button>
@@ -80,4 +85,3 @@
     </footer>
 </body>
 </html>
-   
