--- a/blog/templates/register.html
+++ b/blog/templates/register.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <body>
-    <div class="form-container">]
+    <div class="form-container">
         <h1 id="form-heading">Register for our golf newsletter!</h1>
         <form method="post" action="{% url 'register.html' %}">
             {% csrf_token %}
@@ -30,4 +30,4 @@
     </div>
 </body>
 
-{% endblock content %}
+{% endblock %}
