--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -58,7 +58,7 @@
     <!-- Welcome message with option to register -->
     <div class="hero-unit">
         <h1 id="heading">Welcome to TeeTime</h1>
-        <p><a href="register.html" class="btn btn-primary btn-large">Sign-up for our blog or sign-in here &raquo;</a></p>
+        <p><a href="signup" class="btn btn-primary btn-large">Sign-up for our blog or sign-in here &raquo;</a></p>
     </div>
     <main>
         {% block content %}
