--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -27,8 +27,8 @@
 <body>
     <!-- Header -->
     <div class="page-header">
-        <h1>{% block title %}TeeTime{% endblock %}</h1>
-        <span>{% block text %}All things golf related{% endblock %}</span>
+        <h1>TeeTime</h1>
+        <span>All things golf related</span>
     </div>
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom border-body">
