Change django version to try fix heroku build

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -67,7 +67,7 @@
     </main>
     <div class="buttons">
         <!-- Buttons which will take the user to different parts of the site -->
-        <button class="nav-button text-black" >Click here to view our blog posts &raquo;</button>
+        <button class="nav-button text-black" href="{% url 'post_detail' %}" >Click here to view our blog posts &raquo;</button>
         <button class="nav-button text-black">Click here to view our favourite golf courses &raquo;</button>
         <button class="nav-button text-black">Click here to view the background story of Darragh, the creator of TeeTime &raquo;</button>
     </div>
