--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -45,7 +45,7 @@
                         <a class="nav-link active" href="#">Golf News</a>
                     </li>
                     <li class="nav-item text-black">
-                        <a class="nav-link active" href="#">Latest Golf Gear</a>
+                        <a class="nav-link active" href="#">Register</a>
                     </li>
                 </ul>
                 <form class="search-bar" class="d-flex" role="search">
