Add some basic styling in form to check it eorks

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -169,3 +169,13 @@ button:hover {
 .buttons {
     margin: 60px;
 }
+
+/* Form Styles */
+
+#signup-button {
+    width: 15%;
+}
+
+#signin-span:hover {
+    text-decoration: underline;
+}
