--- a/templates/account/base_entrance.html
+++ b/templates/account/base_entrance.html
@@ -1,1 +1,7 @@
 {% extends "allauth/layouts/entrance.html" %}
+
+{% load static %}
+
+{% block head %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+{% endblock head %}
