--- a/home/templates/home/post_detail.html
+++ b/home/templates/home/post_detail.html
@@ -17,7 +17,7 @@
     <div class="media">
         <img class="mr-3" src="#" alt="Golf related image">
         <div class="media-body">
-            <h5 class="fw-bold">Blog Post - Golf Related</h5>
+            <h5 class="post-subheading">Favourite Golf Course</h5>
             Golf related content...
         </div>
     </div>
