--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item text-black">
-                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link active" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item text-black">
                         <a class="nav-link acive" href="#">Golf Course Reviews</a>
