Add underline effect to return home page on post detail

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -115,6 +115,10 @@ a:hover {
     background-color: #F45D01;
 }
 
+.post-returnhome:hover {
+    text-decoration: underline;
+}
+
 button:hover {
     background-color: #F45D01;
     transition-duration: 0.4s;
