--- a/home/templates/home/post_detail.html
+++ b/home/templates/home/post_detail.html
@@ -10,7 +10,7 @@
                 <h1 class="post-title">{{ post.title }}</h1>
                 <p>{{ post.content }}</p>
                 <p><small>By {{ post.author }} on {{ post.date_posted }}</small></p>
-                <a href="{% url 'home' %}">Return to home page</a>
+                <a class="post-returnhome" href="{% url 'home' %}">Return to home page</a>
             </div>
         </div>
     </div>
