--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -15,9 +15,7 @@
             {% setvar end_link %}
             </a>
         {% endsetvar %}
-        {% element p %}
-            {% blocktranslate %}If you have not created an account yet, then please {{ link }}sign up{{ end_link }} first.{% endblocktranslate %}
-        {% endelement %}
+            {% blocktranslate %}If you have not created an account yet, then please {{ link }}<span class="signup-span">sign up</span>{{ end_link }} first.{% endblocktranslate %}
         {% url 'account_login' as login_url %}
         {% element form form=form method="post" action=login_url tags="entrance,login" %}
             {% slot body %}
