--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -7,18 +7,20 @@
 {% endblock head_title %}
 
 {% block content %}
-        {% trans "Sign Up" %}
+       {% blocktranslate %}Already have an account? Then please {{ link }}<span class="signin-span">sign in</span>{{ end_link }}.{% endblocktranslate %}
     {% setvar link %}
         <a href="{{ login_url }}">
         {% endsetvar %}
         {% setvar end_link %}
         </a>
     {% endsetvar %}
-        {% blocktranslate %}Already have an account? Then please {{ link }}<span id="signin-span">sign in</span>{{ end_link }}.{% endblocktranslate %}
-    {% if not SOCIALACCOUNT_ONLY %}
+        {% if not SOCIALACCOUNT_ONLY %}
         {% url 'account_signup' as action_url %}
         {% element form form=form method="post" action=action_url tags="entrance,signup" %}
             {% slot body %}
+                <div class="signup-below">
+                {% trans "Sign Up below for all the latest golf news!" %}
+                </div>
                 {% csrf_token %}
                 {% element fields form=form unlabeled=True %}
                 {% endelement %}
