--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,6 +44,14 @@ h1 {
     border: 5px solid white;
 }
 
+.signin-div {
+    margin-top: 30px; 
+    background-color: aqua;
+    border: 5px solid white;
+    border-style: ridge;
+    margin: 50px;
+}
+
 /* Form styles */
 
 .form-container {
