--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -5,9 +5,6 @@
     {% trans "Sign In" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Sign In" %}
-    {% endelement %}
     {% if not SOCIALACCOUNT_ONLY %}
         {% setvar link %}
             <a href="{{ signup_url }}">
@@ -15,9 +12,17 @@
             {% setvar end_link %}
             </a>
         {% endsetvar %}
+        <div class="signup-div">
+            <i class="fa-solid fa-golf-ball-tee" id="golfball"></i>
             {% blocktranslate %}If you have not created an account yet, then please {{ link }}<span class="signup-span">sign up</span>{{ end_link }} first.{% endblocktranslate %}
+            <i class="fa-solid fa-golf-ball-tee" id="golfball"></i>
+        </div>
         {% url 'account_login' as login_url %}
+        <div class="login-form">
         {% element form form=form method="post" action=login_url tags="entrance,login" %}
+        {% element h1 %}
+            {% trans "Sign In" %}
+        {% endelement %}
             {% slot body %}
                 {% csrf_token %}
                 {% element fields form=form unlabeled=True %}
