--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -34,7 +34,7 @@
             {% endslot %}
             {% slot actions %}
             <!-- Sign Up button inside the form -->
-                <button id="signup-button" type="submit">
+                <button class="form-button" type="submit">
                     {% trans "Sign Up" %}
                 </button>
             {% endslot %}
