--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
                         <a class="nav-link active" href="{% url 'account_signup' %}" href="#">Register</a>
                     </li>
                 </ul>
-                <form class="search-bar" class="d-flex" role="search">
+                <form id="search-bar" class="search-bar" class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
