--- a/templates/base.html
+++ b/templates/base.html
@@ -26,9 +26,11 @@
 </head>
 <body>
     <!-- Header -->
-    <div class="page-header">
-        <h1><a href="{% url 'home' %}">TeeTime</h1></a>
-        <span>All things golf related</span>
+    <div class="header-div">
+        <header class="page-header">
+            <h1><a href="{% url 'home' %}">TeeTime</h1></a>
+            <span>All things golf related</span>
+        </header>
     </div>
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom border-body">
@@ -48,10 +50,6 @@
                         <a class="nav-link active" href="{% url 'account_signup' %}" href="#">Register</a>
                     </li>
                 </ul>
-                <form id="search-bar" class="search-bar" class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
             </div>
         </div>
     </nav>
@@ -66,9 +64,9 @@
     </main>
     <div class="buttons">
         <!-- Buttons which will take the user to different parts of the site -->
-        <button class="nav-button text-black">Click here to view our blog posts &raquo;</button>
-        <button class="nav-button text-black">Click here to view our favourite golf courses &raquo;</button>
-        <button class="nav-button text-black">Click here to view the background story of Darragh, the creator of TeeTime &raquo;</button>
+        <button class="wide-buttons text-black">Click here to view our blog posts &raquo;</button>
+        <button class="wide-buttons text-black">Click here to view our favourite golf courses &raquo;</button>
+        <button class="wide-buttons text-black">Click here to view the background story of Darragh, the creator of TeeTime &raquo;</button>
     </div>
     {% endblock %}
     <footer class="footer-main">
