--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,7 @@
             <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
             <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
           </ul>
+          <p id="copyright">Darragh Drennan &copy; 2024</p>
         </div>
     </footer>
 </body>
