--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                         <a class="nav-link active" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item text-black">
-                        <a class="nav-link acive" href="#">Golf Course Reviews</a>
+                        <a class="nav-link acive" href="{% url 'golfcourse_list' %}">Golf Courses</a>
                     </li>
                     <li class="nav-item text-black">
                         <a class="nav-link active" href="#">Golf News</a>
