--- a/home/templates/home/golfcourse_list.html
+++ b/home/templates/home/golfcourse_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% load static %}
-    {% block content}
+    {% block content %}
     <h1 class="golf-course">Submit your favourite golf courses here!</h1>
         <ul>
             {% for course in course_list %}
